# RMPC_Assignment1

./: .clang-tidy  .gitignore  CHANGELOG.rst  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  franka.repos  franka_entrypoint.sh  solveIK.py  transformation_utils.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
answer_code/: solveFK.py
assignment/: forword_kinematics.py  inverse_kinematics.py
franka_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
franka_bringup/config/: controllers.yaml  franka.config.yaml
franka_bringup/launch/: example.launch.py  franka.launch.py  joint_impedance_with_ik_example_controller.launch.py
franka_bringup/utils/: launch_utils.py
franka_example_controllers/: CHANGELOG.rst  CMakeLists.txt  franka_example_controllers.xml  package.xml
franka_example_controllers/include/franka_example_controllers/: cartesian_elbow_example_controller.hpp  cartesian_orientation_example_controller.hpp  cartesian_pose_example_controller.hpp  elbow_example_controller.hpp  gravity_compensation_example_controller.hpp  gripper_example_controller.hpp  joint_impedance_example_controller.hpp  joint_impedance_with_ik_example_controller.hpp  joint_position_example_controller.hpp  joint_velocity_example_controller.hpp  robot_utils.hpp
franka_example_controllers/src/: cartesian_elbow_example_controller.cpp  cartesian_orientation_example_controller.cpp  cartesian_pose_example_controller.cpp  cartesian_velocity_example_controller.cpp  elbow_example_controller.cpp  gravity_compensation_example_controller.cpp  gripper_example_controller.cpp  joint_impedance_example_controller.cpp  joint_impedance_with_ik_example_controller.cpp  joint_position_example_controller.cpp  joint_velocity_example_controller.cpp  move_to_start_example_controller.cpp
franka_fr3_moveit_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
franka_fr3_moveit_config/config/: fr3_controllers.yaml  fr3_ros_controllers.yaml  kinematics.yaml
franka_fr3_moveit_config/launch/: move_group.launch.py  moveit.launch.py
franka_fr3_moveit_config/rviz/: moveit.rviz
franka_gazebo/: README.md
franka_gazebo/franka_gazebo_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
franka_gazebo/franka_gazebo_bringup/config/: franka_gazebo_controllers.yaml
franka_gazebo/franka_gazebo_bringup/launch/: gazebo_joint_impedance_controller_example.launch.py  gazebo_joint_position_controller_example.launch.py  gazebo_joint_velocity_controller_example.launch.py  visualize_franka_robot.launch.py
franka_gazebo/franka_ign_ros2_control/: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  README.md  ign_hardware_plugins.xml  package.xml
franka_gazebo/franka_ign_ros2_control/src/: ign_ros2_control_plugin.cpp  ign_system.cpp  model_kdl.cpp
franka_gripper/: CHANGELOG.rst  CMakeLists.txt  package.xml
franka_gripper/config/: franka_gripper_node.yaml
franka_gripper/franka_gripper/: __init__.py
franka_gripper/launch/: gripper.launch.py
franka_gripper/scripts/: fake_gripper_state_publisher.py
franka_hardware/: CHANGELOG.rst  CMakeLists.txt  package.xml
franka_hardware/include/franka_hardware/: franka_action_server.hpp  franka_hardware_interface.hpp  franka_param_service_server.hpp  robot.hpp  ros_libfranka_logger.hpp
franka_hardware/src/: franka_action_server.cpp  franka_hardware_interface.cpp  franka_param_service_server.cpp  robot.cpp  ros_libfranka_logger.cpp
franka_hardware/test/: CMakeLists.txt  fr3.urdf  fr3_unsupported_version.urdf  franka_action_server_test.cpp  franka_hardware_cartesian_command_interface_test.cpp  franka_hardware_cartesian_command_interface_test.hpp  franka_hardware_interface_test.cpp  franka_robot_test.cpp  franka_robot_test.hpp  test_utils.hpp
franka_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
franka_robot_state_broadcaster/: CHANGELOG.rst  CMakeLists.txt  package.xml
franka_robot_state_broadcaster/include/franka_robot_state_broadcaster/: franka_robot_state_broadcaster.hpp
franka_robot_state_broadcaster/src/: franka_robot_state_broadcaster.cpp  franka_robot_state_broadcaster_parameters.yaml
franka_robot_state_broadcaster/test/: franka_robot_state_broadcaster_parameters.yaml  test_franka_robot_state_broadcaster.cpp
franka_ros2/: CMakeLists.txt  package.xml
franka_semantic_components/: CHANGELOG.rst  CMakeLists.txt  package.xml
franka_semantic_components/include/franka_semantic_components/: franka_cartesian_pose_interface.hpp  franka_cartesian_velocity_interface.hpp  (+3 more)
franka_semantic_components/src/: franka_cartesian_pose_interface.cpp  franka_cartesian_velocity_interface.cpp  franka_robot_model.cpp  franka_robot_state.cpp  translation_utils.cpp
franka_semantic_components/test/: franka_cartesian_pose_interface_test.cpp  franka_cartesian_pose_interface_test.hpp  franka_cartesian_velocity_interface_test.cpp  franka_cartesian_velocity_interface_test.hpp  franka_robot_model_test.hpp  franka_robot_state_test.cpp  franka_robot_state_test.hpp  robot_description_test.txt
integration_launch_testing/: CHANGELOG.rst  CMakeLists.txt  package.xml
integration_launch_testing/test/: test_franka_gripper_position.py  test_move_to_start_example_controller.py
solution/: solveFK.py  solveIK.py  transformation_utils.py
(+4 files in other folders)
