<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_gazebo_bringup</name>
  <version>2.0.2</version>
  <description>Contains launch files for the franka_gazebo project</description>
  <maintainer email="support@franka.de">Franka Robotics GmbH</maintainer>
  <license>Apache 2.0</license>

  <depend>ros_gz</depend>
  <depend>sdformat_urdf</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>franka_description</depend>
  <depend>franka_ign_ros2_control</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2controlcli</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
